Swagger e readme settings.
